rank_party.html

--- a/frontend/rank_party.html
+++ b/frontend/rank_party.html
@@ -119,7 +119,7 @@
                         <div class="avatar"></div>
                     </td>
                     <td>더불어민주당</td>
-                    <td>박홍근</td>
+                    <td>박찬대</td>
                     <td class="home-icon">
                         <a href="#" title="정당 홈페이지 바로가기">
                             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -133,8 +133,8 @@
                     <td>
                         <div class="avatar"></div>
                     </td>
-                    <td>정의당</td>
-                    <td>이정미</td>
+                    <td>조국혁신당</td>
+                    <td>김선민</td>
                     <td class="home-icon">
                         <a href="#" title="정당 홈페이지 바로가기">
                             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -148,7 +148,7 @@
                     <td>
                         <div class="avatar"></div>
                     </td>
-                    <td>기본소득당</td>
+                    <td>개혁신당</td>
                     <td>신지혜</td>
                     <td class="home-icon">
                         <a href="#" title="정당 홈페이지 바로가기">
@@ -163,8 +163,8 @@
                     <td>
                         <div class="avatar"></div>
                     </td>
-                    <td>시대전환</td>
-                    <td>조정훈</td>
+                    <td>사회민주당</td>
+                    <td>한창민</td>
                     <td class="home-icon">
                         <a href="#" title="정당 홈페이지 바로가기">
                             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -178,8 +178,8 @@
                     <td>
                         <div class="avatar"></div>
                     </td>
-                    <td>녹색당</td>
-                    <td>이수진</td>
+                    <td>기본소득당</td>
+                    <td>용혜인</td>
                     <td class="home-icon">
                         <a href="#" title="정당 홈페이지 바로가기">
                             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -208,8 +208,8 @@
                     <td>
                         <div class="avatar"></div>
                     </td>
-                    <td>국민당</td>
-                    <td>안철수</td>
+                    <td>무소속</td>
+                    <td>무소속</td>
                     <td class="home-icon">
                         <a href="#" title="정당 홈페이지 바로가기">
                             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
