--- a/frontend/mainpage.html
+++ b/frontend/mainpage.html
@@ -150,9 +150,9 @@
         <div class="notices-container">
             <h3 class="section-title">공지사항 <span class="more-link">&gt;</span></h3>
             <ul class="notices-list">
+                <li>제21대 대통령선거 출마 의원 제외 안내</li>
+                <li>국회의원 사진 및 정당 로고 출처 안내</li>
                 <li>서버 점검 안내 (1월 20일 02:00 ~ 06:00)</li>
-                <li>백일하 서비스 업데이트 안내 (v2.0)</li>
-                <li>2025년 국회 일정 업데이트 완료</li>
             </ul>
         </div>
     </div>
