--- a/frontend/percent.html
+++ b/frontend/percent.html
@@ -87,7 +87,7 @@
                     <input type="checkbox" id="check1" class="checkbox-input" checked>
                     <label for="check1" class="checkbox-label">무효표 및 기권</label>
                 </div>
-                <div class="checkbox-description">초기값: -2.5%</div>
+                <div class="checkbox-description">초기값: -2%</div>
             </div>
             <div class="checkbox-item">
                 <div class="checkbox-header">
@@ -124,14 +124,14 @@
                     <input type="checkbox" id="check6" class="checkbox-input" checked>
                     <label for="check6" class="checkbox-label">출석</label>
                 </div>
-                <div class="checkbox-description">초기값: -10%</div>
+                <div class="checkbox-description">초기값: -8%</div>
             </div>
             <div class="checkbox-item">
                 <div class="checkbox-header">
                     <input type="checkbox" id="check7" class="checkbox-input" checked>
                     <label for="check7" class="checkbox-label">투표 결과 일치</label>
                 </div>
-                <div class="checkbox-description">초기값: 7.5%</div>
+                <div class="checkbox-description">초기값: 7%</div>
             </div>
             <div class="checkbox-item">
                 <div class="checkbox-header">
@@ -139,6 +139,15 @@
                     <label for="check8" class="checkbox-label">투표 결과 불일치</label>
                 </div>
                 <div class="checkbox-description">초기값: 4%</div>
+            </div>
+
+            <!-- 3행 -->
+            <div class="checkbox-item">
+                <div class="checkbox-header">
+                    <input type="checkbox" id="check5" class="checkbox-input" checked>
+                    <label for="check5" class="checkbox-label">간사</label>
+                </div>
+                <div class="checkbox-description">초기값: 3%</div>
             </div>
         </div>
         
@@ -188,6 +197,12 @@
                 <div class="percent-item">
                     <span class="percent-label">투표 결과 불일치</span>
                     <input type="text" class="percent-input" value="4%" placeholder="비율 입력">
+                </div>
+            </div>
+            <div class="percent-row">
+                <div class="percent-item">
+                    <span class="percent-label">간사</span>
+                    <input type="text" class="percent-input" value="3%" placeholder="비율 입력">
                 </div>
             </div>
         </div>
