--- a/frontend/percent.html
+++ b/frontend/percent.html
@@ -204,6 +204,9 @@
                     <span class="percent-label">간사</span>
                     <input type="text" class="percent-input" value="3%" placeholder="비율 입력">
                 </div>
+                    <div class="percent-item">
+                    <span class="percent-label"></span>
+                </div>
             </div>
         </div>
     </main>
