--- a/frontend/percent.html
+++ b/frontend/percent.html
@@ -175,34 +175,34 @@
                     <input type="text" class="percent-input" value="40%" placeholder="비율 입력">
                 </div>
                 <div class="percent-item">
-                    <span class="percent-label">출석</span>
-                    <input type="text" class="percent-input" value="-10%" placeholder="비율 입력">
-                </div>
-            </div>
-            <div class="percent-row">
-                <div class="percent-item">
-                    <span class="percent-label">본회의 가결</span>
-                    <input type="text" class="percent-input" value="23%" placeholder="비율 입력">
-                </div>
-                <div class="percent-item">
-                    <span class="percent-label">투표 결과 일치</span>
-                    <input type="text" class="percent-input" value="7.5%" placeholder="비율 입력">
-                </div>
-            </div>
-            <div class="percent-row">
-                <div class="percent-item">
                     <span class="percent-label">위원장</span>
                     <input type="text" class="percent-input" value="5%" placeholder="비율 입력">
-                </div>
-                <div class="percent-item">
-                    <span class="percent-label">투표 결과 불일치</span>
-                    <input type="text" class="percent-input" value="4%" placeholder="비율 입력">
                 </div>
             </div>
             <div class="percent-row">
                 <div class="percent-item">
                     <span class="percent-label">청원 소개</span>
                     <input type="text" class="percent-input" value="8%" placeholder="비율 입력">
+                </div>
+                <div class="percent-item">
+                    <span class="percent-label">청원 결과</span>
+                    <input type="text" class="percent-input" value="23%" placeholder="비율 입력">
+                </div>
+            </div>
+            <div class="percent-row">
+                <div class="percent-item">
+                    <span class="percent-label">출석</span>
+                    <input type="text" class="percent-input" value="-8%" placeholder="비율 입력">
+                </div>
+                <div class="percent-item">
+                    <span class="percent-label">투표 결과 일치</span>
+                    <input type="text" class="percent-input" value="7%" placeholder="비율 입력">
+                </div>
+            </div>
+            <div class="percent-row">
+                <div class="percent-item">
+                    <span class="percent-label">투표 결과 불일치</span>
+                    <input type="text" class="percent-input" value="4%" placeholder="비율 입력">
                 </div>
                     <div class="percent-item">
                     <span class="percent-label"></span>
