--- a/frontend/outpage.html
+++ b/frontend/outpage.html
@@ -81,7 +81,7 @@
                     <tr>
                         <th style="width: 150px;">카테고리</th>
                         <th style="width: 200px;">사이트명</th>
-                        <th>설명</th>
+                        <th class="description-column">설명</th>
                         <th style="width: 80px;">링크</th>
                     </tr>
                 </thead>
@@ -90,7 +90,7 @@
                     <tr>
                         <td rowspan="2" class="category-cell">국회 공식 사이트</td>
                         <td>대한민국 국회</td>
-                        <td>대한민국 국회 공식 홈페이지입니다. 국회 일정, 의원 정보, 입법 활동 등을 확인할 수 있습니다.</td>
+                        <td class="description-column">대한민국 국회 공식 홈페이지입니다. 국회 일정, 의원 정보, 입법 활동 등을 확인할 수 있습니다.</td>
                         <td class="link-cell">
                             <a href="https://www.assembly.go.kr/portal/main/main.do" target="_blank" class="home-link">
                                 <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -101,7 +101,7 @@
                     </tr>
                     <tr>
                         <td>열린국회정보</td>
-                        <td>국회의 모든 정보를 투명하게 공개하는 열린국회정보 포털입니다.</td>
+                        <td class="description-column">국회의 모든 정보를 투명하게 공개하는 열린국회정보 포털입니다.</td>
                         <td class="link-cell">
                             <a href="https://open.assembly.go.kr/portal/mainPage.do" target="_blank" class="home-link">
                                 <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -115,7 +115,7 @@
                     <tr>
                         <td rowspan="2" class="category-cell">의안 및 입법 정보</td>
                         <td>의안정보시스템</td>
-                        <td>국회에서 처리되는 모든 의안의 진행 상황과 내용을 검색하고 확인할 수 있습니다.</td>
+                        <td class="description-column">국회에서 처리되는 모든 의안의 진행 상황과 내용을 검색하고 확인할 수 있습니다.</td>
                         <td class="link-cell">
                             <a href="https://likms.assembly.go.kr/bill/main.do" target="_blank" class="home-link">
                                 <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -126,7 +126,7 @@
                     </tr>
                     <tr>
                         <td>국가법령정보센터</td>
-                        <td>대한민국의 모든 법령 정보를 검색하고 확인할 수 있는 법제처 운영 사이트입니다.</td>
+                        <td class="description-column">대한민국의 모든 법령 정보를 검색하고 확인할 수 있는 법제처 운영 사이트입니다.</td>
                         <td class="link-cell">
                             <a href="https://www.law.go.kr/" target="_blank" class="home-link">
                                 <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -140,7 +140,7 @@
                     <tr>
                         <td rowspan="2" class="category-cell">국민 청원</td>
                         <td>청원24</td>
-                        <td>국민이 직접 정부에 청원을 제출하고 답변을 받을 수 있는 대통령실 청원 시스템입니다.</td>
+                        <td class="description-column">국민이 직접 정부에 청원을 제출하고 답변을 받을 수 있는 대통령실 청원 시스템입니다.</td>
                         <td class="link-cell">
                             <a href="https://www.cheongwon.go.kr/portal" target="_blank" class="home-link">
                                 <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -151,7 +151,7 @@
                     </tr>
                     <tr>
                         <td>국민동의청원</td>
-                        <td>10만명 이상의 국민이 동의한 청원을 국회가 직접 심사하는 국회 청원 플랫폼입니다.</td>
+                        <td class="description-column">10만명 이상의 국민이 동의한 청원을 국회가 직접 심사하는 국회 청원 플랫폼입니다.</td>
                         <td class="link-cell">
                             <a href="https://petitions.assembly.go.kr/" target="_blank" class="home-link">
                                 <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -165,7 +165,7 @@
                     <tr>
                         <td rowspan="2" class="category-cell">기타 유용한 사이트</td>
                         <td>중앙선거관리위원회</td>
-                        <td>선거 정보, 후보자 정보, 투표 안내 등 선거 관련 모든 정보를 제공합니다.</td>
+                        <td class="description-column">선거 정보, 후보자 정보, 투표 안내 등 선거 관련 모든 정보를 제공합니다.</td>
                         <td class="link-cell">
                             <a href="https://www.nec.go.kr/" target="_blank" class="home-link">
                                 <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -176,7 +176,7 @@
                     </tr>
                     <tr>
                         <td>대한민국 정책브리핑</td>
-                        <td>대한민국 공식 전자정보 누리집입니다.</td>
+                        <td class="description-column">대한민국 공식 전자정보 누리집입니다.</td>
                         <td class="link-cell">
                             <a href="https://www.korea.kr/" target="_blank" class="home-link">
                                 <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
