--- a/frontend/meeting.html
+++ b/frontend/meeting.html
@@ -95,6 +95,11 @@
                 <button class="filter-btn" data-filter="rejected">부결</button>
                 <button class="filter-btn" data-filter="pending">심의중</button>
             </div>
+
+            <!-- 법안 정보 -->
+            <div class="bill-info">
+                <p>전체 <span id="totalBillCount">12</span> 건</p>
+            </div>
             
             <!-- 법안 목록 테이블 -->
             <div class="bill-list">
