--- a/frontend/more_petition.html
+++ b/frontend/more_petition.html
@@ -77,11 +77,11 @@
             <!-- 청원 제목 -->
             <div class="petition-title">
                 <h1 id="petitionTitle">채 상병 사망 사건 수사 방해 및 사건 은폐 등의 진상규명 국정조사 계획 수립 촉구에 관한 청원</h1>
-                <button class="home-button" onclick="window.location.href='mainpage.html'">
+                <a href="#" class="home-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12 2.1L1 12h3v9h7v-6h2v6h7v-9h3L12 2.1zm0 2.691l6 5.4V19h-3v-6H9v6H6v-8.809l6-5.4z"/>
                     </svg>
-                </button>
+                </a>
             </div>
             
             <!-- 진행 단계 -->
