--- a/frontend/index.html
+++ b/frontend/index.html
@@ -145,7 +145,7 @@
             <h3 class="section-title">공지사항 <span class="more-link">&gt;</span></h3>
             <ul class="notices-list">
                 <li>제21대 대통령선거 출마 의원 제외 안내</li>
-                <li>국회의원 사진 및 정당 로고 출처 안내</li>
+                <li>국회의원 사진 출처 안내</li>
                 <li>서버 점검 안내 (1월 20일 02:00 ~ 06:00)</li>
             </ul>
         </div>
