--- a/frontend/percent.html
+++ b/frontend/percent.html
@@ -94,7 +94,7 @@
                     <input type="checkbox" id="check1" class="checkbox-input" checked>
                     <label for="check1" class="checkbox-label">무효표 및 기권</label>
                 </div>
-                <div class="checkbox-description">초기값: -2%</div>
+                <div class="checkbox-description">초기값: 2%</div>
             </div>
             <div class="checkbox-item">
                 <div class="checkbox-header">
@@ -131,7 +131,7 @@
                     <input type="checkbox" id="check6" class="checkbox-input" checked>
                     <label for="check6" class="checkbox-label">출석</label>
                 </div>
-                <div class="checkbox-description">초기값: -8%</div>
+                <div class="checkbox-description">초기값: 8%</div>
             </div>
             <div class="checkbox-item">
                 <div class="checkbox-header">
@@ -165,8 +165,8 @@
                     <input type="text" class="percent-input" value="3%" placeholder="비율 입력">
                 </div>
                 <div class="percent-item">
-                    <span class="percent-label">무효표 및 기권표</span>
-                    <input type="text" class="percent-input" value="-2%" placeholder="비율 입력">
+                    <span class="percent-label">무효표 및 기권</span>
+                    <input type="text" class="percent-input" value="2%" placeholder="비율 입력">
                 </div>
             </div>
             <div class="percent-row">
@@ -192,7 +192,7 @@
             <div class="percent-row">
                 <div class="percent-item">
                     <span class="percent-label">출석</span>
-                    <input type="text" class="percent-input" value="-8%" placeholder="비율 입력">
+                    <input type="text" class="percent-input" value="8%" placeholder="비율 입력">
                 </div>
                 <div class="percent-item">
                     <span class="percent-label">투표 결과 일치</span>
