--- a/frontend/percent_member.html
+++ b/frontend/percent_member.html
@@ -71,6 +71,7 @@
     </nav>
     </div>
     
+    <main>
     <!-- 검색 바 -->
     <div class="search-container">
         <div class="container">
@@ -136,6 +137,7 @@
             </div>
         </div>
     </div>
+    </main>
     
     <!-- 챗봇 아이콘 -->
     <div class="robot-icon">
