--- a/frontend/petition.html
+++ b/frontend/petition.html
@@ -72,6 +72,7 @@
     </nav>
     </div>
     
+    <main>
     <!-- 메인 콘텐츠 영역 시작 -->
     <div class="content-container">
         <h1 class="page-title">국회 청원 현황</h1>
@@ -137,6 +138,7 @@
             <!-- 페이지네이션이 JavaScript로 생성됩니다 -->
         </div>
     </div>
+    </main>
     
     <!-- 챗봇 아이콘 -->
     <div class="robot-icon">
