--- a/frontend/announcements.html
+++ b/frontend/announcements.html
@@ -72,6 +72,7 @@
     </div>
     
     <!-- 공지사항 컨텐츠 -->
+    <main>
     <div class="content-container">
         <section class="announcement-section">
             <h2>공지사항</h2>
@@ -85,6 +86,7 @@
             <!-- 페이지네이션이 JavaScript로 생성됩니다 -->
         </div>
     </div>
+    </main>
 
     <!-- 챗봇 아이콘 -->
     <div class="robot-icon">
