--- a/frontend/percent_member.html
+++ b/frontend/percent_member.html
@@ -11,7 +11,7 @@
 <body>
     <!-- 헤더 시작 -->
     <header>
-        <a href="mainpage.html" style="text-decoration: none; color: inherit;">
+        <a href="index.html" style="text-decoration: none; color: inherit;">
             <div class="logo">
                 <img src="https://raw.githubusercontent.com/moody1317/osbasicproject_4/refs/heads/main/logo.png" alt="백일하 로고">
             </div>
