--- a/frontend/petition.html
+++ b/frontend/petition.html
@@ -13,7 +13,7 @@
     <!-- 헤더 시작 -->
     <header>
         <!-- 로고 -->
-        <a href="mainpage.html" style="text-decoration: none; color: inherit;">
+        <a href="index.html" style="text-decoration: none; color: inherit;">
             <div class="logo">
                 <img src="https://raw.githubusercontent.com/moody1317/osbasicproject_4/refs/heads/main/logo.png" alt="백일하 로고">
             </div>
