--- a/frontend/public/percent_member.html
+++ b/frontend/public/percent_member.html
@@ -135,7 +135,7 @@
                 <div class="stat-item">청원 소개 <span class="stat-value" id="petitionProposalStat">로딩 중...</span></div>
                 <div class="stat-item">청원 결과 <span class="stat-value" id="petitionResultStat">로딩 중...</span></div>
                 <div class="stat-item">무효표 및 기권 <span class="stat-value" id="abstentionStat">로딩 중...</span></div>
-                <div class="stat-item">간사 경험 <span class="stat-value" id="committeeStat">로딩 중...</span></div>
+                <div class="stat-item">위원회 직책<span class="stat-value" id="committeeStat">로딩 중...</span></div>
                 <div class="stat-item">투표 결과 일치 <span class="stat-value" id="voteMatchStat">로딩 중...</span></div>
                 <div class="stat-item">투표 결과 불일치 <span class="stat-value" id="voteMismatchStat">로딩 중...</span></div>
             </div>
