--- a/frontend/public/compare_party.html
+++ b/frontend/public/compare_party.html
@@ -119,7 +119,6 @@
                             i
                             <div class="tooltip">
                                 가결 수: 로딩 중...<br>
-                                가결률: 로딩 중...
                             </div>
                         </span>
                     </div>
@@ -133,7 +132,6 @@
                             i
                             <div class="tooltip">
                                 제안 건수: 로딩 중...<br>
-                                채택률: 로딩 중...
                             </div>
                         </span>
                     </div>
@@ -146,9 +144,7 @@
                         <span class="info-icon">
                             i
                             <div class="tooltip">
-                                가결: 로딩 중...<br>
-                                부결: 로딩 중...<br>
-                                가결률: 로딩 중...
+                                청원 결과수: 로딩 중...<br>
                             </div>
                         </span>
                     </div>
