--- a/frontend/public/rank_member.html
+++ b/frontend/public/rank_member.html
@@ -184,6 +184,7 @@
     <script src="global_sync.js"></script>
     <script src="scripts.js"></script>
     <script src="rank_member.js"></script>
+    <script src="weight_sync.js"></script>
 
     <footer style="margin-top: 40px; padding: 20px; font-size: 12px; color: gray; text-align: center; border-top: 1px solid #ddd; background-color: #f9f9f9;">
         본 웹사이트는 충북대학교의 오픈소스 기초 프로젝트 과제를 위해 제작된 비상업적 프로젝트입니다.<br>
