--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -148,9 +148,9 @@
         <div class="notices-container">
             <h3 class="section-title">공지사항 <span class="more-link">&gt;</span></h3>
             <ul class="notices-list">
+                <li>제21대 대통령선거 당선으로 인한 의원 안내</li>
                 <li>제21대 대통령선거 출마 의원 제외 안내</li>
-                <li>국회의원 사진 출처 안내</li>
-                <li>서버 점검 안내 (1월 20일 02:00 ~ 06:00)</li>     
+                <li>국회의원 사진 출처 안내</li>     
             </ul>
         </div>
     </div>
