--- a/frontend/public/percent_member.html
+++ b/frontend/public/percent_member.html
@@ -11,7 +11,7 @@
 <body>
     <!-- 헤더 시작 -->
     <header>
-        <a href="index.html" style="text-decoration: none; color: inherit;">
+        <a href="mainpage.html" style="text-decoration: none; color: inherit;">
             <div class="logo">
                 <img src="https://raw.githubusercontent.com/moody1317/osbasicproject_4/refs/heads/main/logo.png" alt="백일하 로고">
             </div>
@@ -93,7 +93,7 @@
                     </select>
                 </div>
                 <div class="search-input">
-                    <input type="text" id="memberSearchInput" placeholder="국회의원명을 입력하세요" autocomplete="off">
+                    <input type="text" id="memberSearchInput" placeholder="의원 이름 입력" />
                     <!-- 검색 결과 드롭다운이 여기에 동적으로 추가됩니다 -->
                 </div>
                 <button class="search-button" id="searchButton">
@@ -128,6 +128,7 @@
             
             <div class="member-right-column">
                 <div class="ranking" id="overallRanking">전체 순위: <strong>로딩 중...</strong></div>
+                <div class="ranking" id="partyRanking">정당 내 순위: <strong>로딩 중...</strong></div>
                 
                 <div class="stat-item">출석 <span class="stat-value" id="attendanceStat">로딩 중...</span></div>
                 <div class="stat-item">본회의 가결 <span class="stat-value" id="billPassStat">로딩 중...</span></div>
