--- a/frontend/public/percent_member.html
+++ b/frontend/public/percent_member.html
@@ -121,8 +121,8 @@
                             </svg>
                         </a>
                     </span>
-                    <h1 class="member-name" id="memberName">나경원 의원</h1>
-                    <span class="member-party" id="memberParty">국민의힘</span>
+                    <h1 class="member-name" id="memberName">의원</h1>
+                    <span class="member-party" id="memberParty">정당명</span>
                 </div>
             </div>
             
